[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Block.gd" type="Script" id=1]
[ext_resource path="res://assets/block.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[node name="Block" type="Area2D" groups=[
"blocks",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SizeTween" type="Tween" parent="."]

[node name="ColorTween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.819608, 0.4, 1 )
light_mask = 2
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Block_area_entered"]
